--- a/TipTopShoes/Home.html
+++ b/TipTopShoes/Home.html
@@ -7,8 +7,18 @@
 
 <body>
 <div id="Banner">
-<h1>TIPTOP SHOES</h1>
-<img href="Assets/Company_Logo.png" alt="logo" id="logo">
+<img src="Assets/Company_Logo.png" alt="logo" id="logo">
+
+<a>About Us</a>
+<a>Products</a>
+<a>Services</a>
+<a>Wishlist</a>
+<a>Contact Us</a>
+<a>Login</a>
+<a>Cart</a>
+
+<input type="text" placeholder="Search..">
+
 </div>
 
 </body>
