--- a/TipTopShoes/Home.html
+++ b/TipTopShoes/Home.html
@@ -6,19 +6,23 @@
 </head>
 
 <body>
-<div id="Banner">
-<img src="Assets/Company_Logo.png" alt="logo" id="logo">
+<nav>
+    <img src="Assets/Company_Logo.png" alt="logo" id="logo">
 
-<a>About Us</a>
-<a>Products</a>
-<a>Services</a>
-<a>Wishlist</a>
-<a>Contact Us</a>
-<a>Login</a>
-<a>Cart</a>
+    <a>About Us</a>
+    <a>Products</a>
+    <a>Services</a>
+    <a>Wishlist</a>
+    <a>Contact Us</a>
+    <a>Login</a>
+    <a>Cart</a>
+    
+    <input type="text" placeholder="Search..">
+    
+</nav>
 
-<input type="text" placeholder="Search..">
-
+<div id="Latest_Arrivals">
+<h1>Latest Arrivals!</h1>
 </div>
 
 </body>
