--- a/TipTopShoes/Home.html
+++ b/TipTopShoes/Home.html
@@ -22,10 +22,52 @@
 </nav>
 
 <div id="Latest_Arrivals">
+<div>
 <h1>Latest Arrivals!</h1>
+<a>
+</div>
+<div id="Images">
+<div>
+<img src="Assets/Clancy Blue.jpg">
+<p>Hello World</p>
+</a>
+</div>
+<div>
+<a>
+<img src="Assets/Gary Black.jpg">
+<p>Hello World</p>
+</a>
+</div>
+<div>
+<a>
+<img src="Assets/Sally Black.jpg">
+<p>Hello World</p>
+</a>
+</div>
+<div>
+<a>
+<img src="Assets/Gary Tan.jpg">
+<p>Hello World</p>
+</a>
+</div>
+<div>
+<a>
+<img src="Assets/Heavenly Black.jpg">
+<p>Hello World</p>
+</a>
+</div>
+<div>
+<a>
+<img src="Assets/Sally Tan.jpg">
+<p>Hello World</p>
+</a>
+</div>
 </div>
 
+
+
 </body>
+
 <footer>
 
 </footer>
