--- a/Services.html
+++ b/Services.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    
+
     <div id="home">
         <a href="Index.html" id="logo">
             <img src="Assets/Company_Logo.png" alt="logo">
         </a>
-        <button id="nav-button"><i class="fa-solid fa-bars" ></i></button>
+        <button id="nav-button"><i class="fa-solid fa-bars"></i></button>
     </div>
 
     <div class="wrapper">
@@ -41,40 +41,35 @@
                 </form>
             </nav>
         </header>
+
         <main id="main">
-            <section id="Latest_Arrivals">
-                <h1>Latest Arrivals!</h1>
-                <div id="Images">
-                    <div><a><img src="Assets/Heavenly Black.jpg">
-                            <p>Heavenly Black</p>
-                        </a></div>
-                    <div><a><img src="Assets/Gary Black.jpg">
-                            <p>Gary Black</p>
-                        </a></div>
-                    <div><a><img src="Assets/Sally Black.jpg">
-                            <p>Sally Black</p>
-                        </a></div>
-                    <div><a><img src="Assets/Gary Tan.jpg">
-                            <p>Gary Tan</p>
-                        </a></div>
-                    <div><a><img src="Assets/Sally Tan.jpg">
-                            <p>Sally Tan</p>
-                        </a></div>
-                    <div><a><img src="Assets/Clancy Blue.jpg">
-                            <p>Clancy Blue</p>
-                        </a></div>
+            <div id="returns">
+                <div id="content">
+                    <h1>Returns and Exchanges</h1>
+                    <p id="contentP">TipToe Soles is confident that you will be happy with your purchase.<br>
+                        If for any reason this is not the case, we offer FREE RETURNS for items over $60 within 28 days
+                        of the order date.<br>
+                        TipToe Soles will not take responsibility for returned items not received if registered post is
+                        not
+                        used.<br>
+                       <strong> We have 4 conditions of return for change of mind, item(s) must be returned:<br></strong>
+                    </p>
+                    <ul id="contentP">
+                        <li>Within 28 days of the order date</li>
+                        <li>Item must be unworn with the original tags still attached
+                        <li>we are unable to accept shoes with dirty marks or damaged soles</li>
+                        <li>Items must be returned in the original shoe box which must be in the original condition.
+                        </li>
+                        <li>Postage is non-refundable</li>
+                    </ul>
+                    <p id="contentP">
+                        <strong> TipToe Soles reserves the right to refuse the return if these conditions are not
+                            adhered to.</strong>
+                    </p>
                 </div>
-            </section>
-            <div id="block">
-                <h1>Welcome to Tip Top Soles</h1>
-                <p>TipToe Soles is an Australian owned and operated company.<br>
-                    We aim to provide comfortable footwear at affordable prices to customers within Australia and around the
-                    world.<br>
-                    Feel free to explore our site!</p>
             </div>
         </main>
     </div>
-
     <footer id="footer">
         <section id="contact">
             <h2>Contact Us</h2>
