--- a/About_Us.html
+++ b/About_Us.html
@@ -6,40 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TipTop Shoes</title>
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="Reactive.css">
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
 <body>
-    <header id="header">
-        <nav id="nav">
-            <a href="Index.html" id="logo">
-                <img src="Assets/Company_Logo.png" alt="logo">
-            </a>
-            <a href="About_Us.html">About Us</a>
-            <a href="Products.html">Products</a>
-            <a href="Services.html">Services</a>
-            <a href="Wishlist.html">Wishlist</a>
-            <a href="Login.html">Login</a>
-            <a href="Contact_Us.html">Contact Us</a>
-            <a href="Feedback">Feedback</a>
-            <form id="query">
-                <input type="text" placeholder="Search.." name="search">
-                <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-        </nav>
-    </header>
 
-    <main id="main">
-        <div id="Welcome">
-            <h1>Welcome to Tip Top Soles</h1>
-            <p>TipToe Soles is an Australian owned and operated company.<br>
-                We aim to provide comfortable footwear at affordable prices to customers within Australia and around the
-                world.<br>
-                Feel free to explore our site!</p>
-        </div>
-    </main>
+    <div id="home">
+        <a href="Index.html" id="logo">
+            <img src="Assets/Company_Logo.png" alt="logo">
+        </a>
+        <button id="nav-button"><i class="fa-solid fa-bars"></i></button>
+    </div>
 
+    <div class="wrapper">
+        <header id="header">
+            <nav id="nav">
+                <a href="About_Us.html">About Us</a>
+                <a href="Products.html">Products</a>
+                <a href="Services.html">Services</a>
+                <div id="Icons">
+                    <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
+                    <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
+                    <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
+                </div>
+                <form id="query">
+                    <input type="text" placeholder="Search.." name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </nav>
+        </header>
+
+        <main id="main">
+            <div id="Welcome">
+                <h1>Welcome to Tip Top Soles</h1>
+                <p>TipToe Soles is an Australian owned and operated company.<br>
+                    We aim to provide comfortable footwear at affordable prices to customers within Australia and around
+                    the
+                    world.<br>
+                    Feel free to explore our site!</p>
+            </div>
+        </main>
+    </div>
     <footer id="footer">
         <section id="contact">
             <h2>Contact Us</h2>
