--- a/Services.html
+++ b/Services.html
@@ -50,8 +50,7 @@
                         If for any reason this is not the case, we offer FREE RETURNS for items over $60 within 28 days
                         of the order date.<br>
                         TipToe Soles will not take responsibility for returned items not received if registered post is
-                        not
-                        used.<br>
+                        not used.<br>
                        <strong> We have 4 conditions of return for change of mind, item(s) must be returned:<br></strong>
                     </p>
                     <ul id="contentP">
