--- a/Index.html
+++ b/Index.html
@@ -16,35 +16,35 @@
 
 <body>
     
-    <div id="home">
-        <a href="Index.html" id="logo">
+    <div class="home">
+        <a href="Index.html" class="logo">
             <img src="Assets/Company_Logo.png" alt="logo">
         </a>
-        <button id="nav-button"><i class="fa-solid fa-bars" ></i></button>
+        <button class="nav-button"><i class="fa-solid fa-bars" ></i></button>
     </div>
 
     <div class="wrapper">
-        <header id="header">
-            <nav id="nav">
+        <header class="header">
+            <nav class="nav">
                 <a href="About_Us.html">About Us</a>
                 <a href="Products.html">Products</a>
                 <a href="Services.html">Services</a>
-                <div id="Icons">
+                <div class="Icons">
                     <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
                     <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
                     <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
                     <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
                 </div>
-                <form id="query">
+                <form class="query">
                     <input type="text" placeholder="Search.." name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </nav>
         </header>
-        <main id="main">
-            <section id="Latest_Arrivals">
+        <main class="main">
+            <section class="Latest_Arrivals">
                 <h1>Latest Arrivals!</h1>
-                <div id="Images">
+                <div class="Images">
                     <div><a><img src="Assets/Heavenly Black.jpg">
                             <p>Heavenly Black</p>
                         </a></div>
@@ -65,7 +65,7 @@
                         </a></div>
                 </div>
             </section>
-            <div id="block">
+            <div class="block">
                 <h1>Welcome to Tip Top Soles</h1>
                 <p>TipToe Soles is an Australian owned and operated company.<br>
                     We aim to provide comfortable footwear at affordable prices to customers within Australia and around the
@@ -75,13 +75,13 @@
         </main>
     </div>
 
-    <footer id="footer">
-        <section id="contact">
+    <footer class="footer">
+        <section class="contact">
             <h2>Contact Us</h2>
             <a href="tel:(02)00000000">Phone: (02) 0000 0000</a>
             <a href="mailto:Hello@tiptopshoes.com">Email: Hello@TipTopShoes.com</a>
         </section>
-        <p id="copyright">&copy; Lauren Howell</p>
+        <p class="copyright">&copy; Lauren Howell</p>
     </footer>
 </body>
 
