--- a/Products.html
+++ b/Products.html
@@ -16,37 +16,37 @@
 
 <body>
 
-    <div id="home">
-        <a href="Index.html" id="logo">
+    <div class="home">
+        <a href="Index.html" class="logo">
             <img src="Assets/Company_Logo.png" alt="logo">
         </a>
-        <button id="nav-button"><i class="fa-solid fa-bars"></i></button>
+        <button class="nav-button"><i class="fa-solid fa-bars"></i></button>
     </div>
 
     <div class="wrapper">
-        <header id="header">
-            <nav id="nav">
+        <header class="header">
+            <nav class="nav">
                 <a href="About_Us.html">About Us</a>
-                <a href="Products.html">Products</a>
+                <a href="Products.html" class="current">Products</a>
                 <a href="Services.html">Services</a>
-                <div id="Icons">
+                <div class="Icons">
                     <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
                     <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
                     <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
                     <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
                 </div>
-                <form id="query">
+                <form class="query">
                     <input type="text" placeholder="Search.." name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </nav>
         </header>
 
-        <main id="main">
-            <section id="Products">
+        <main class="main">
+            <section class="Products">
                 <h1>Our Products</h1>
                 <div><img src="Assets/Heavenly Black.jpg">
-                    <div id="info">
+                    <div class="info">
                         <h4>Heavenly Black</h4>
                         <b>Colour:</b> Black<br>
                         <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div><img src="Assets/Gary Black.jpg">
-                    <div id="info">
+                    <div class="info">
                         <h4>Gary Black</h4>
                         <b>Colour:</b> Black<br>
                         <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -99,7 +99,7 @@
 
                     </div>
                     <div><img src="Assets/Sally Black.jpg">
-                        <div id="info">
+                        <div class="info">
                             <h4>Sally Black</h4>
                             <b>Colour:</b> Black<br>
                             <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <div><img src="Assets/Gary Tan.jpg">
-                        <div id="info">
+                        <div class="info">
                             <h4>Gary Tan</h4>
                             <b>Colour:</b> Black<br>
                             <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div><img src="Assets/Sally Tan.jpg">
-                        <div id="info">
+                        <div class="info">
                             <h4>Sally Tan</h4>
                             <b>Colour:</b> Black<br>
                             <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div><img src="Assets/Clancy Blue.jpg">
-                        <div id="info">
+                        <div class="info">
                             <h4>Clancy Blue</h4>
                             <b>Colour:</b> Black<br>
                             <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
@@ -213,13 +213,13 @@
             </section>
         </main>
     </div>
-        <footer id="footer">
-            <section id="contact">
+        <footer class="footer">
+            <section class="contact">
                 <h2>Contact Us</h2>
                 <a href="tel:(02)00000000">Phone: (02) 0000 0000</a>
                 <a href="mailto:Hello@tiptopshoes.com">Email: Hello@TipTopShoes.com</a>
             </section>
-            <p id="copyright">&copy; Lauren Howell
+            <p class="copyright">&copy; Lauren Howell
         </footer>
 </body>
 
