--- a/Services.html
+++ b/Services.html
@@ -16,44 +16,44 @@
 
 <body>
 
-    <div id="home">
-        <a href="Index.html" id="logo">
+    <div class="home">
+        <a href="Index.html" class="logo">
             <img src="Assets/Company_Logo.png" alt="logo">
         </a>
-        <button id="nav-button"><i class="fa-solid fa-bars"></i></button>
+        <button class="nav-button"><i class="fa-solid fa-bars"></i></button>
     </div>
 
     <div class="wrapper">
-        <header id="header">
-            <nav id="nav">
+        <header class="header">
+            <nav class="nav">
                 <a href="About_Us.html">About Us</a>
                 <a href="Products.html">Products</a>
-                <a href="Services.html">Services</a>
-                <div id="Icons">
+                <a href="Services.html" class="current">Services</a>
+                <div class="Icons">
                     <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
                     <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
                     <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
                     <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
                 </div>
-                <form id="query">
+                <form class="query">
                     <input type="text" placeholder="Search.." name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </nav>
         </header>
 
-        <main id="main">
-            <div id="returns">
-                <div id="content">
+        <main class="main">
+            <div class="returns">
+                <div class="content">
                     <h1>Returns and Exchanges</h1>
-                    <p id="contentP">TipToe Soles is confident that you will be happy with your purchase.<br>
+                    <p class="contentP">TipToe Soles is confident that you will be happy with your purchase.<br>
                         If for any reason this is not the case, we offer FREE RETURNS for items over $60 within 28 days
                         of the order date.<br>
                         TipToe Soles will not take responsibility for returned items not received if registered post is
                         not used.<br>
                        <strong> We have 4 conditions of return for change of mind, item(s) must be returned:<br></strong>
                     </p>
-                    <ul id="contentP">
+                    <ul class="contentP">
                         <li>Within 28 days of the order date</li>
                         <li>Item must be unworn with the original tags still attached
                         <li>we are unable to accept shoes with dirty marks or damaged soles</li>
@@ -61,7 +61,7 @@
                         </li>
                         <li>Postage is non-refundable</li>
                     </ul>
-                    <p id="contentP">
+                    <p class="contentP">
                         <strong> TipToe Soles reserves the right to refuse the return if these conditions are not
                             adhered to.</strong>
                     </p>
@@ -69,13 +69,13 @@
             </div>
         </main>
     </div>
-    <footer id="footer">
-        <section id="contact">
+    <footer class="footer">
+        <section class="contact">
             <h2>Contact Us</h2>
             <a href="tel:(02)00000000">Phone: (02) 0000 0000</a>
             <a href="mailto:Hello@tiptopshoes.com">Email: Hello@TipTopShoes.com</a>
         </section>
-        <p id="copyright">&copy; Lauren Howell</p>
+        <p class="copyright">&copy; Lauren Howell</p>
     </footer>
 </body>
 
