--- a/Index.html
+++ b/Index.html
@@ -45,22 +45,22 @@
             <section class="Latest_Arrivals">
                 <h1>Latest Arrivals!</h1>
                 <div class="Images">
-                    <div><a><img src="Assets/Heavenly Black.jpg">
+                    <div><a><img src="Assets/Heavenly Black.jpg" alt="Heavenly Black">
                             <p>Heavenly Black</p>
                         </a></div>
-                    <div><a><img src="Assets/Gary Black.jpg">
+                    <div><a><img src="Assets/Gary Black.jpg" alt="Gary Black">
                             <p>Gary Black</p>
                         </a></div>
-                    <div><a><img src="Assets/Sally Black.jpg">
+                    <div><a><img src="Assets/Sally Black.jpg" alt="Sally Black">
                             <p>Sally Black</p>
                         </a></div>
-                    <div><a><img src="Assets/Gary Tan.jpg">
+                    <div><a><img src="Assets/Gary Tan.jpg" alt="Gary Tan">
                             <p>Gary Tan</p>
                         </a></div>
-                    <div><a><img src="Assets/Sally Tan.jpg">
+                    <div><a><img src="Assets/Sally Tan.jpg" alt="Sally Tan">
                             <p>Sally Tan</p>
                         </a></div>
-                    <div><a><img src="Assets/Clancy Blue.jpg">
+                    <div><a><img src="Assets/Clancy Blue.jpg" alt="Clancy Blue">
                             <p>Clancy Blue</p>
                         </a></div>
                 </div>
