--- a/Products.html
+++ b/Products.html
@@ -45,7 +45,7 @@
         <main class="main">
             <section class="Products">
                 <h1>Our Products</h1>
-                <div><img src="Assets/Heavenly Black.jpg">
+                <div><img src="Assets/Heavenly Black.jpg" alt="Heavenly Black">
                     <div class="info">
                         <h4>Heavenly Black</h4>
                         <b>Colour:</b> Black<br>
@@ -72,7 +72,7 @@
 
                     </div>
                 </div>
-                <div><img src="Assets/Gary Black.jpg">
+                <div><img src="Assets/Gary Black.jpg" alt="Gary Black">
                     <div class="info">
                         <h4>Gary Black</h4>
                         <b>Colour:</b> Black<br>
@@ -98,7 +98,7 @@
                         </ul>
 
                     </div>
-                    <div><img src="Assets/Sally Black.jpg">
+                    <div><img src="Assets/Sally Black.jpg" alt="Sally Black">
                         <div class="info">
                             <h4>Sally Black</h4>
                             <b>Colour:</b> Black<br>
@@ -126,7 +126,7 @@
 
                         </div>
                     </div>
-                    <div><img src="Assets/Gary Tan.jpg">
+                    <div><img src="Assets/Gary Tan.jpg" alt="Gary Tan">
                         <div class="info">
                             <h4>Gary Tan</h4>
                             <b>Colour:</b> Black<br>
@@ -154,7 +154,7 @@
 
                         </div>
                     </div>
-                    <div><img src="Assets/Sally Tan.jpg">
+                    <div><img src="Assets/Sally Tan.jpg" alt="Sally Tan">
                         <div class="info">
                             <h4>Sally Tan</h4>
                             <b>Colour:</b> Black<br>
@@ -182,7 +182,7 @@
 
                         </div>
                     </div>
-                    <div><img src="Assets/Clancy Blue.jpg">
+                    <div><img src="Assets/Clancy Blue.jpg" alt="Clancy Blue">
                         <div class="info">
                             <h4>Clancy Blue</h4>
                             <b>Colour:</b> Black<br>
